[package]
name = "postgrest-query-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the postgres query parameters"
license = "MIT"
repository = "https://github.com/thomas9911/postgrest-query-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peekmore = "1.2"
thiserror = "1.0"
